--- a/tests/PokedexService.InMemoryTests/PokedexService.InMemoryTests.csproj
+++ b/tests/PokedexService.InMemoryTests/PokedexService.InMemoryTests.csproj
@@ -6,8 +6,10 @@
 
     <ItemGroup>
       <PackageReference Include="FluentAssertions" Version="6.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.12" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
       <PackageReference Include="NUnit" Version="3.13.2" />
+      <PackageReference Include="TestStack.BDDfy" Version="4.3.2" />
     </ItemGroup>
 
     <ItemGroup>
