Add pokemon fun translation endpoint

--- a/src/Hosts/appsettings.Development.json
+++ b/src/Hosts/appsettings.Development.json
@@ -8,5 +8,12 @@
   },
   "PokeApi": {
     "BaseUrl": "https://pokeapi.co"
+  },
+  "FunTranslation": {
+    "BaseUrl": "https://api.funtranslations.com",
+    "SupportedTranslation": [
+      "yoda",
+      "shakespeare"
+    ]
   }
 }
