Refactor: remove unused config, add string ignore case, renaming

--- a/src/Hosts/appsettings.Development.json
+++ b/src/Hosts/appsettings.Development.json
@@ -10,10 +10,6 @@
     "BaseUrl": "https://pokeapi.co"
   },
   "FunTranslation": {
-    "BaseUrl": "https://api.funtranslations.com",
-    "SupportedTranslation": [
-      "yoda",
-      "shakespeare"
-    ]
+    "BaseUrl": "https://api.funtranslations.com"
   }
 }
