--- a/tests/PokedexService.InMemoryTests/PokedexService.InMemoryTests.csproj
+++ b/tests/PokedexService.InMemoryTests/PokedexService.InMemoryTests.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.12" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
       <PackageReference Include="NUnit" Version="3.13.2" />
+      <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
       <PackageReference Include="TestStack.BDDfy" Version="4.3.2" />
     </ItemGroup>
 
